# fastweigh-intelligence

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
config/: tenant.example.yaml
docs/: deployment.md  insomnia-guide.md  kpi-cookbook.md  runbook.md  workflow-map.md
fastweigh_ops_intelligence.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
ops_intelligence/: cli.py  config.py  pipeline.py  utils.py
ops_intelligence/alerts/: engine.py  notifiers.py  rules.py
ops_intelligence/dashboard/: app.py
ops_intelligence/extraction/: sync.py
ops_intelligence/graphql/: client.py  queries.py  schema_guard.py
ops_intelligence/reports/: exporter.py
ops_intelligence/scheduler/: service.py
ops_intelligence/warehouse/: db.py  modeling.py
queries/: customers.graphql  dispatch_events.graphql  hauler_pay.graphql  invoices.graphql  orders.graphql  tickets.graphql
tests/: test_alerts.py  test_modeling.py  test_schema_guard.py
